# safegi

./: ReadMe.txt
SafeGI/: ReadMe.txt
SafeGI/dep/w32/lib/: freeglut.lib
SafeGI/typed/: CMakeLists.txt  ReadMe.txt  libs.cmake  macros.cmake
SafeGI/typed/apps/tsafegi_gl/: CMakeLists.txt
SafeGI/typed/apps/tsafegi_ray/: CMakeLists.txt
SafeGI/untyped/: CMakeLists.txt  ReadMe.txt  libs.cmake  macros.cmake
SafeGI/untyped/apps/usafegi_gl/: CMakeLists.txt
SafeGI/untyped/apps/usafegi_ray/: CMakeLists.txt
SafeGI/untyped/libs/gi_aux/: CMakeLists.txt
SafePBRT/: ReadMe.txt
SafePBRT/typed/src/: CMakeLists.txt
SafePBRT/typed/src/pbrt/: CMakeLists.txt
SafePBRT/typed/src/pbrt/accelerators/: bvh.cpp  bvh.h
SafePBRT/typed/src/pbrt/cameras/: orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
SafePBRT/typed/src/pbrt/core/: api.cpp  camera.cpp  camera.h  diffgeom.cpp  diffgeom.h  film.h  filter.h  floatfile.cpp  floatfile.h  geometry.h  imageio.h  imageio.hpp  integrator.cpp  integrator.h  intersection.cpp  intersection.h  kdtree.h  light.cpp  light.h  material.cpp  material.h  memory.h  mipmap.h  montecarlo.cpp  montecarlo.h  octree.h  parallel.cpp  parallel.h  paramset.cpp  paramset.h  pbrt.h  pbrtlex.cpp  pbrtlex.ll  pbrtparse.cpp  pbrtparse.hpp  pbrtparse.yy  primitive.cpp  primitive.h  progressreporter.cpp  quaternion.cpp  (+19 more)
SafePBRT/typed/src/pbrt/film/: image.cpp  image.h
SafePBRT/typed/src/pbrt/filters/: box.cpp  box.h
SafePBRT/typed/src/pbrt/integrators/: directlighting.cpp  directlighting.h  emission.cpp  emission.h  path.cpp  path.h  photonmap.cpp  photonmap.h
SafePBRT/typed/src/pbrt/lights/: diffuse.cpp  diffuse.h  infinite.cpp  infinite.h  point.cpp  point.h
SafePBRT/typed/src/pbrt/main/: pbrt.cpp
SafePBRT/typed/src/pbrt/materials/: glass.cpp  glass.h  matte.cpp  matte.h  metal.cpp  metal.h  mirror.cpp  mirror.h  plastic.cpp  plastic.h  uber.cpp  uber.h
SafePBRT/typed/src/pbrt/renderers/: samplerrenderer.cpp  samplerrenderer.h
SafePBRT/typed/src/pbrt/safe_types/: dimensions.h  m_float.h  m_spaces.h  m_units.h  uvector.h
SafePBRT/typed/src/pbrt/samplers/: lowdiscrepancy.cpp  lowdiscrepancy.h  random.cpp  random.h
SafePBRT/typed/src/pbrt/shapes/: disk.cpp  disk.h  sphere.cpp  sphere.h  trianglemesh.cpp  trianglemesh.h
SafePBRT/typed/src/pbrt/textures/: constant.cpp  constant.h  imagemap.cpp  imagemap.h  scale.cpp  scale.h  uv.cpp  uv.h
SafePBRT/typed/src/pbrt/volumes/: homogeneous.cpp  homogeneous.h
SafePBRT/untyped/src/: CMakeLists.txt  cmake-msvs10.bat  libs.cmake  macros.cmake
SafePBRT/untyped/src/pbrt/: CMakeLists.txt
SafePBRT/untyped/src/pbrt/core/: api.cpp  imageio.cpp  integrator.h  light.cpp  light.h  mipmap.h  pbrt.h  pbrtlex.cpp  pbrtparse.cpp  pbrtparse.hpp  primitive.h  reflection.cpp  reflection.h  spectrum.cpp  spectrum.h  texture.cpp  texture.h  volume.cpp
SafePBRT/untyped/src/pbrt/lights/: infinite.cpp  infinite.h  point.cpp  point.h
SafePBRT/untyped/src/pbrt/samplers/: random.cpp
